# pac-man

./: .gitignore  CMakeLists.txt  README.md  main.c  pacman.h
assets/: map.txt
include/: drawing.h  game.h  ghost.h  map.h  menu.h  player.h  uiInfo.h  universal.h
src/: drawing.c  game.c  ghost.c  main.c  map.c  menu.c  player.c  sound.c  uiInfo.c  universal.c
